--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -595,3 +595,45 @@ Section: Biological Sciences},
 	pages = {83},
 	file = {PubMed Central Full Text PDF:/Users/hufengling/Zotero/storage/56TTHFX5/Nalepa et al. - 2019 - Data Augmentation for Brain-Tumor Segmentation A .pdf:application/pdf},
 }
+
+@techreport{baller_developmental_2021,
+	title = {Developmental coupling of cerebral blood flow and {fMRI} fluctuations in youth},
+	copyright = {© 2021, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NonCommercial-NoDerivs 4.0 International), CC BY-NC-ND 4.0, as described at http://creativecommons.org/licenses/by-nc-nd/4.0/},
+	url = {https://www.biorxiv.org/content/10.1101/2021.07.28.454179v1},
+	abstract = {To support brain development during youth, the brain must balance energy delivery and consumption. Previous studies in adults have demonstrated high coupling between cerebral blood flow and brain function as measured using functional neuroimaging, but how this relationship evolves over adolescence is unknown. To address this gap, we studied a sample of 831 children and adolescents (478 females, ages 8-22) from the Philadelphia Neurodevelopmental Cohort who were scanned at 3T with both arterial spin labeled (ASL) MRI and resting-state functional MRI (fMRI). Local coupling between cerebral blood flow (CBF, from ASL) and the amplitude of low frequency fluctuations (ALFF, from fMRI) was first quantified using locally weighted regressions on the cortical surface. We then used generalized additive models to evaluate how CBF-ALFF coupling was associated with age, sex, and executive function. Enrichment of effects within canonical functional networks was evaluated using spin-based permutation tests. Our analyses revealed tight CBF-ALFF coupling across the brain. Whole-brain CBF-ALFF coupling decreased with age, largely driven by coupling decreases in the inferior frontal cortex, precuneus, visual cortex, and temporoparietal cortex (pfdr {\textless}0.05). Females had stronger coupling in the frontoparietal network than males (pfdr {\textless}0.05). Better executive function was associated with decreased coupling in the somatomotor network (pfdr {\textless}0.05). Overall, we found that CBF-ALFF coupling evolves in development, differs by sex, and is associated with individual differences in executive function. Future studies will investigate relationships between maturational changes in CBF-ALFF coupling and the presence of psychiatric symptoms in youth.
+SIGNIFICANCE The functions of the human brain are metabolically expensive and reliant on coupling between cerebral blood flow and neural activity. Previous neuroimaging studies in adults demonstrate tight physiology-function coupling, but how this coupling evolves over development is unknown. Here, we examine the relationship between blood flow as measured by arterial spin labeling and the amplitude of low frequency fluctuations from resting-state magnetic resonance imaging across a large sample of youth. We demonstrate regionally specific changes in coupling over age and show that variations in coupling are related to biological sex and executive function. Our results highlight the importance of CBF-ALFF coupling throughout development; we discuss its potential as a future target for the study of neuropsychiatric diseases.},
+	language = {en},
+	urldate = {2021-12-03},
+	author = {Baller, Erica B. and Valcarcel, Alessandra M. and Adebimpe, Azeez and Alexander-Bloch, Aaron and Cui, Zaixu and Gur, Ruben C. and Gur, Raquel E. and Larsen, Bart L. and Linn, Kristin A. and O’Donnell, Carly M. and Pines, Adam R. and Raznahan, Armin and Roalf, David R. and Sydnor, Valerie J. and Tapera, Tinashe M. and Tisdall, M. Dylan and Vandekar, Simon and Xia, Cedric H. and Detre, John A. and Shinohara, Russell T. and Satterthwaite, Theodore D.},
+	month = jul,
+	year = {2021},
+	doi = {10.1101/2021.07.28.454179},
+	note = {Company: Cold Spring Harbor Laboratory
+Distributor: Cold Spring Harbor Laboratory
+Label: Cold Spring Harbor Laboratory
+Section: New Results
+Type: article},
+	pages = {2021.07.28.454179},
+	file = {Snapshot:/Users/hufengling/Zotero/storage/NWIPUYKI/2021.07.28.html:text/html;Full Text PDF:/Users/hufengling/Zotero/storage/9PVL8VQ7/Baller et al. - 2021 - Developmental coupling of cerebral blood flow and .pdf:application/pdf},
+}
+@Article{valcarcelMIMoSAAutomatedMethod2018,
+  title = {{{MIMoSA}}: {{An Automated Method}} for {{Intermodal Segmentation Analysis}} of {{Multiple Sclerosis Brain Lesions}}},
+  shorttitle = {{{MIMoSA}}},
+  author = {Alessandra M. Valcarcel and Kristin A. Linn and Simon N. Vandekar and Theodore D. Satterthwaite and John Muschelli and Peter A. Calabresi and Dzung L. Pham and Melissa Lynne Martin and Russell T. Shinohara},
+  date = {2018-07},
+  journaltitle = {Journal of Neuroimaging: Official Journal of the American Society of Neuroimaging},
+  shortjournal = {J Neuroimaging},
+  volume = {28},
+  number = {4},
+  eprint = {29516669},
+  eprinttype = {pmid},
+  pages = {389--398},
+  issn = {1552-6569},
+  doi = {10.1111/jon.12506},
+  abstract = {BACKGROUND AND PURPOSE: Magnetic resonance imaging (MRI) is crucial for in vivo detection and characterization of white matter lesions (WMLs) in multiple sclerosis. While WMLs have been studied for over two decades using MRI, automated segmentation remains challenging. Although the majority of statistical techniques for the automated segmentation of WMLs are based on single imaging modalities, recent advances have used multimodal techniques for identifying WMLs. Complementary modalities emphasize different tissue properties, which help identify interrelated features of lesions. METHODS: Method for Inter-Modal Segmentation Analysis (MIMoSA), a fully automatic lesion segmentation algorithm that utilizes novel covariance features from intermodal coupling regression in addition to mean structure to model the probability lesion is contained in each voxel, is proposed. MIMoSA was validated by comparison with both expert manual and other automated segmentation methods in two datasets. The first included 98 subjects imaged at Johns Hopkins Hospital in which bootstrap cross-validation was used to compare the performance of MIMoSA against OASIS and LesionTOADS, two popular automatic segmentation approaches. For a secondary validation, a publicly available data from a segmentation challenge were used for performance benchmarking. RESULTS: In the Johns Hopkins study, MIMoSA yielded average Sørensen-Dice coefficient (DSC) of .57 and partial AUC of .68 calculated with false positive rates up to 1\%. This was superior to performance using OASIS and LesionTOADS. The proposed method also performed competitively in the segmentation challenge dataset. CONCLUSION: MIMoSA resulted in statistically significant improvements in lesion segmentation performance compared with LesionTOADS and OASIS, and performed competitively in an additional validation study.},
+  langid = {english},
+  pmcid = {PMC6030441},
+  keywords = {Adult,Algorithms,Automatic segmentation,Brain,Female,Humans,Image Processing; Computer-Assisted,lesion detection,logistic regression,Magnetic Resonance Imaging,Male,Middle Aged,multiple sclerosis,Multiple Sclerosis},
+  annotation = {00034},
+  file = {/Users/hufengling/Zotero/storage/V8E4S2LP/Valcarcel_et_al_2018_MIMoSA.pdf},
+}
