--- a/ALFF_BASILc_REHO/R/create_barplot.Rmd
+++ b/ALFF_BASILc_REHO/R/create_barplot.Rmd
@@ -50,9 +50,11 @@ x_angle <- 45
 y_axis_size <- 15
 y_title_size <- 23
 y_title <- "Proportion"
+pval_size <- 5
+pval_nudge <- 0.01
 
 y_lims_age <- c(0, 0.2)
-y_lims_sex <- c(0, 0.13)
+y_lims_sex <- c(0, 0.15)
 
 age_aal <- ggplot(coupled_aal %>% filter(map_name == "global_age"), 
        aes(region, proportion)) +
@@ -60,7 +62,6 @@ age_aal <- ggplot(coupled_aal %>% filter(map_name == "global_age"),
   labs(x = "", y = y_title,
        title = "Age Associations in AAL Regions") +
   scale_y_continuous(limits = y_lims_age) +
-  geom_text("")
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
         panel.grid.major.y = element_line(color = "gray85"),
@@ -77,6 +78,7 @@ age_yeo7 <- ggplot(coupled_yeo7 %>% filter(map_name == "global_age"),
        title = "Age Associations in Yeo 7 Networks") +
   scale_y_continuous(limits = y_lims_age) +
   scale_x_discrete(labels = c("Visual", "Somatomotor", "Dorsal\nAttention", "Ventral\nAttention", "Limbic", "Fronto-\nparietal", "Default")) +
+  geom_text(label = c("", "", "", "", "", "p = 0.0125", "p = 0.039"), size = pval_size, nudge_y = pval_nudge) + 
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
         panel.grid.major.y = element_line(color = "gray85"),
@@ -108,6 +110,7 @@ sex_yeo7 <- ggplot(coupled_yeo7 %>% filter(map_name == "global_sex"),
        title = "Sex Associations in Yeo 7 Networks") +
   scale_y_continuous(limits = y_lims_sex) +
   scale_x_discrete(labels = c("Visual", "Somatomotor", "Dorsal\nAttention", "Ventral\nAttention", "Limbic", "Fronto-\nparietal", "Default")) +
+  geom_text(label = c("", "", "", "", "", "p = 0.0115", ""), size = pval_size, nudge_y = pval_nudge) + 
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
         panel.grid.major.y = element_line(color = "gray85"),
