--- a/manuscript/02-methods.Rmd
+++ b/manuscript/02-methods.Rmd
@@ -1,12 +1,12 @@
 # Methods
 
 ## Subjects
-  We included 803 subjects (340 males) from ages 8-23 (mean = 15.6; sd = 3.3) from the Philadelphia Neurodevelopmental Cohort (PNC)[@satterthwaite_neuroimaging_2014]. Of the 1445 PNC subjects who underwent neuroimaging, we initially excluded those meeting any of the following criteria: history of psychoactive medication (n = 165), history of inpatient psychiatric hospitalization (n = 51), or history of medical disorders that could impact brain function (n = 166). From the remaining 1113 subjects, we included those who underwent the combination of T1-weighted MRI, arterial spin labeling MRI (ASL), and resting state fMRI (rfMRI) scanning, each of acceptable image quality as determined based on automated and manual screening. This resulted in the final set of 803 subjects used for this study.
+  We included 803 subjects (340 males) from ages 8-23 (mean = 15.6; sd = 3.3) from the Philadelphia Neurodevelopmental Cohort (PNC) [@satterthwaite_neuroimaging_2014]. Of the 1445 PNC subjects who underwent neuroimaging, we initially excluded those meeting any of the following criteria: history of psychoactive medication (n = 165), history of inpatient psychiatric hospitalization (n = 51), or history of medical disorders that could impact brain function (n = 166). From the remaining 1113 subjects, we included those who underwent the combination of T1-weighted MRI, arterial spin labeling MRI (ASL), and resting state fMRI (rfMRI) scanning, each of acceptable image quality as determined based on automated and manual screening. This resulted in the final set of 803 subjects used for this study.
   
-  The Institutional Review Boards of the University of Pennsylvania and the Children's Hospital of Pennsylvania approved all study procedures. All study subjects gave informed consent; for subjects under the age of 18, parents or guardians provided consent and subjects provided assent. Additional details of the PNC study have been previously described[@satterthwaite_neuroimaging_2014].
+  The Institutional Review Boards of the University of Pennsylvania and the Children's Hospital of Pennsylvania approved all study procedures. All study subjects gave informed consent; for subjects under the age of 18, parents or guardians provided consent and subjects provided assent. Additional details of the PNC study have been previously described [@satterthwaite_neuroimaging_2014].
 
 ## Image acquisition
-  All PNC imaging was acquired at a single site using a 3T Siemens Tim Trio scanner with 32-channel head coil. To minimize motion, subject heads stabilized using one foam pad over each ear and one over the top of the head. Image acquisition procedures have been previously described[@satterthwaite_neuroimaging_2014][@baller_developmental_2021].
+  All PNC imaging was acquired at a single site using a 3T Siemens Tim Trio scanner with 32-channel head coil. To minimize motion, subject heads stabilized using one foam pad over each ear and one over the top of the head. Image acquisition procedures have been previously described [@satterthwaite_neuroimaging_2014][@baller_developmental_2021].
 
   T1 structural images were used for alignment of all scans into common space. T1 images by 3D-encoded magnetization-prepared, rapid acquisition gradient echo (MPRAGE) T1-weighted sequence with the following settings: $T_R$ = 1810 ms; $T_E$ = 3.51 ms; FoV = 180 × 240 mm; matrix size = 192 x 256; number of slices = 160; slice thickness = 1 mm; inter-slice gap = 0 mm; resolution =  0.9375 × 0.9375 × 1 mm.
 
@@ -17,17 +17,19 @@
 ## Image processing
 
 ## Estimation of intermodal coupling
-  For each subject, we calculated voxel-wise IMCo between CBF, ALFF, and ReHo modalities. First, we applied a grey matter mask to each of the three modalities. Then, within each masked modality, we globally scaled intensities to a mean of 0 and a variance of 1. This scaling is necessary because eigendecomposition is later performed on local covariance matrices, so if modalities are defined on drastically different scales, decomposition outputs will reflect differences in baseline variance between modalities rather than local coupling. Next, for each voxel, we extracted local neighborhoods from each of the three modalities and weighted voxels within these local neighborhoods proportional to a Gaussian kernel over their Euclidean distances from the central voxel - in our study, we used FWHM = 3 which corresponds to 7x7x7 voxel (14x14x14mm) local neighborhoods and a standard deviation of ___mm for the Gaussian kernel. Then, we calculated the 3x3 weighted covariance matrix between the neighborhoods, performed eigendecomposition on them, and extracted the first eigenvalue. Lastly, we scaled the first eigenvalue such that its theoretical minimum was 0 and theoretical maximum was 1 and then performed a logit transformation. This resulted in our voxel-level coupling value, where a large value suggests that the modalities covary strongly near that voxel.
+  For each subject, we calculated voxel-wise IMCo between CBF, ALFF, and ReHo modalities. First, we applied a grey matter mask to each of the three modalities. Then, within each masked modality, we globally scaled intensities to a mean of 0 and a variance of 1. This scaling is necessary because eigendecomposition is later performed on local covariance matrices, so if modalities are defined on drastically different scales, decomposition outputs will reflect differences in baseline variance between modalities rather than local coupling. Next, for each voxel, we extracted local neighborhoods from each of the three modalities and weighted voxels within these local neighborhoods proportional to a Gaussian kernel over their Euclidean distances from the central voxel - in our study, we used FWHM = 3 which corresponds to 7x7x7 voxel (14x14x14mm) local neighborhoods and a standard deviation of ___mm for the Gaussian kernel. Then, we calculated the 3x3 weighted covariance matrix between the neighborhoods, performed eigendecomposition on them, and extracted the first eigenvalue. Lastly, we scaled the first eigenvalue such that its theoretical minimum was 0 and theoretical maximum was 1 and then performed a logit transformation so extreme values of coupling would be emphasized. This resulted in our voxel-level coupling value, where a large value suggests that the modalities covary strongly near that voxel.
   
+  For reference, in the three-modality setting, coupling values of -2, 0, and 2 correspond to the first eigenvector explaining 41%, 67%, and 92% of the total variance in that local neighborhood, respectively. In the two-modality setting, coupling values of -2, 0, and 2 correspond to the first eigenvector explaining 56%, 75%, and 94% of the total variance in that local neighborhood, respectively.
+
 ## Voxel-wise statistical analysis
-  We created descriptive coupling maps by taking the means and variances across all 803 subjects at each voxel location in volumetric space. We then projected these mean and variance maps to the FreeSurfer Sphere for visualization of spatial heterogeneity and cortical patterns.
+  We created descriptive coupling maps by taking the means and variances across all 803 subjects at each voxel location in volumetric space. We then projected these mean and variance maps to the FreeSurfer sphere using PySurfer for visualization of spatial heterogeneity and cortical patterns [TOCITE].
   
   To investigate biological relevance of PCA-based IMCo, we used linear regression at each voxel to explore whether coupling was associated with age or sex effects. In all linear regressions, we controlled for race and intra-scanner motion for both ASL and rfMRI scans. To control for multiple comparisons in these voxel-level tests, we used a false discovery rate of 0.05 to correct p-values. Then, we created binary thresholded masks indicating which p-values remained significant post-correction for both age and sex. For this analysis and following analyses, we performed identical analyses for each of the three modalities individually to explore whether the presence of age and sex effects on modality intensities corresponded to the presence of age and sex effects on coupling values (Supplementary Materials).
   
   To visualize the extent of voxels where coupling was associated with age and sex, we counted the proportion of voxels with statistically significant age or sex effects in each of the Yeo 7 functional networks as well as in subcortical regions of interest. We also projected the thresholded p-value maps to the FreeSurfer sphere for visualization and further analyses.
   
 ## Spin testing
-  For each of the age and sex thresholded p-value maps projected to the Freesurfer sphere, we then tested whether the proportion of significant voxels in each functional network was enriched when compared to the proportion of significant voxels overall. Because there is an underlying spatial distribution of significant voxels, we used the spin test [@alexander-bloch_testing_2018]. Briefly, the spin test is a conservative, permutation-based test that rotates the FreeSurfer sphere randomly to create an underlying null distribution that preserves spatial patterns. In our study, we estimated the null distribution over 2,000 permutations - for each permutation, we recorded the Jaccard similarity index between the thresholded p-value map and each of the Yeo 7 networks. Finally, for each network, we calculated the p-value as the proportion of null Jaccard similarity indices equal to or greater than the observed Jaccard similarity index.
+  For each of the age and sex thresholded p-value maps projected to the FreeSurfer sphere, we then tested whether the proportion of significant voxels in each functional network was enriched when compared to the proportion of significant voxels overall. Because there is an underlying spatial distribution of significant voxels, we used the spin test [@alexander-bloch_testing_2018]. Briefly, the spin test is a conservative, permutation-based test that rotates the FreeSurfer sphere randomly to create an underlying null distribution that preserves spatial patterns. In our study, we estimated the null distribution over 2,000 permutations - for each permutation, we recorded the Jaccard similarity index between the thresholded p-value map and each of the Yeo 7 networks. Finally, for each network, we calculated the p-value as the proportion of null Jaccard similarity indices equal to or greater than the observed Jaccard similarity index.
   
 ## Code availibility
   An R package for calculating PCA-based IMCo images is available at: https://github.com/hufengling/IMCo_PCA. All code for analysis is available at: https://github.com/hufengling/IMCo_analyses.
