--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -637,3 +637,21 @@ Type: article},
   annotation = {00034},
   file = {/Users/hufengling/Zotero/storage/V8E4S2LP/Valcarcel_et_al_2018_MIMoSA.pdf},
 }
+@Article{desikanAutomatedLabelingSystem2006a,
+  title = {An Automated Labeling System for Subdividing the Human Cerebral Cortex on {{MRI}} Scans into Gyral Based Regions of Interest},
+  author = {Rahul S. Desikan and Florent S{\a'e}gonne and Bruce Fischl and Brian T. Quinn and Bradford C. Dickerson and Deborah Blacker and Randy L. Buckner and Anders M. Dale and R. Paul Maguire and Bradley T. Hyman and Marilyn S. Albert and Ronald J. Killiany},
+  date = {2006-07-01},
+  journaltitle = {NeuroImage},
+  shortjournal = {Neuroimage},
+  volume = {31},
+  number = {3},
+  eprint = {16530430},
+  eprinttype = {pmid},
+  pages = {968--980},
+  issn = {1053-8119},
+  doi = {10.1016/j.neuroimage.2006.01.021},
+  abstract = {In this study, we have assessed the validity and reliability of an automated labeling system that we have developed for subdividing the human cerebral cortex on magnetic resonance images into gyral based regions of interest (ROIs). Using a dataset of 40 MRI scans we manually identified 34 cortical ROIs in each of the individual hemispheres. This information was then encoded in the form of an atlas that was utilized to automatically label ROIs. To examine the validity, as well as the intra- and inter-rater reliability of the automated system, we used both intraclass correlation coefficients (ICC), and a new method known as mean distance maps, to assess the degree of mismatch between the manual and the automated sets of ROIs. When compared with the manual ROIs, the automated ROIs were highly accurate, with an average ICC of 0.835 across all of the ROIs, and a mean distance error of less than 1 mm. Intra- and inter-rater comparisons yielded little to no difference between the sets of ROIs. These findings suggest that the automated method we have developed for subdividing the human cerebral cortex into standard gyral-based neuroanatomical regions is both anatomically valid and reliable. This method may be useful for both morphometric and functional studies of the cerebral cortex as well as for clinical investigations aimed at tracking the evolution of disease-induced changes over time, including clinical trials in which MRI-based measures are used to examine response to treatment.},
+  langid = {english},
+  keywords = {Adult,Aged,Aged; 80 and over,Aging,Algorithms,Alzheimer Disease,Atrophy,Brain Mapping,Cerebral Cortex,Corpus Callosum,Dominance; Cerebral,Female,Humans,Image Processing; Computer-Assisted,Imaging; Three-Dimensional,Magnetic Resonance Imaging,Male,Middle Aged,Observer Variation,Reproducibility of Results,Software,Statistics as Topic},
+  annotation = {08212},
+}
